syntax = "proto3";
package tendermint.crypto.crypto;
option go_package = "github.com/tendermint/tendermint/crypto";

// For more information on gogo.proto, see:
// https://github.com/gogo/protobuf/blob/master/extensions.md
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
// NOTE: When using custom types, mind the warnings.
// https://github.com/gogo/protobuf/blob/master/custom_types.md#warnings-and-issues

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
// Generate tests
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.testgen_all) = true;

message PubKey {
  oneof sum {
    bytes ed25519 = 1;
    bytes sr25519 = 2;
    bytes secp256k1 = 3;
  }
}

message PrivKey {
  oneof sum {
    bytes ed25519 = 1;
    bytes sr25519 = 2;
    bytes secp256k1 = 3;
  }
}
